--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_FIREBASE_API_KEY=AIzaSyB1wnqeETUcO8ksW8ahDtgpeY7pr9peh5s
-VITE_FIREBASE_AUTH_DOMAIN=passop-2ee71.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=passop-2ee71
-VITE_FIREBASE_STORAGE_BUCKET=passop-2ee71.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=243225713599
-VITE_FIREBASE_APP_ID=1:243225713599:web:eefc143992c8b5d7f31f0a
-VITE_FIREBASE_MEASUREMENT_ID=G-DVGGQL1T1M
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+VITE_FIREBASE_MEASUREMENT_ID=
